# apps/api/alembic/versions/4d348f3385a5_remove_lecture_feilds.py
@@ -1,0 +1,34 @@
+"""remove lecture feilds
+
+Revision ID: 4d348f3385a5
+Revises: a9b8bd19ec21
+Create Date: 2025-09-20 19:07:29.813733
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = '4d348f3385a5'
+down_revision: Union[str, Sequence[str], None] = 'a9b8bd19ec21'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('lecture', 'weight')
+    op.drop_column('lecture', 'final_grade')
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('lecture', sa.Column('final_grade', sa.DOUBLE_PRECISION(precision=53), autoincrement=False, nullable=True))
+    op.add_column('lecture', sa.Column('weight', sa.DOUBLE_PRECISION(precision=53), autoincrement=False, nullable=True))
+    # ### end Alembic commands ###
